<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DescubreActivity">

    <TextView
        android:id="@+id/textView_descubre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/descubre"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="36dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_poster"
                android:layout_width="174dp"
                android:layout_height="200dp"
                android:contentDescription="@string/poster_descripcion" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/textView_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView_año"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/año" />

                <TextView
                    android:id="@+id/textView_ID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    tools:visibility="invisible" />

                <ToggleButton
                    android:id="@+id/toggleButton_añadir_pelicula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/my_btn_toggle"
                    android:checked="false"
                    android:text="@string/añadir_pelicula"
                    android:textColor="@color/toggle_color"
                    android:textOff="@string/añadir_pelicula"
                    android:textOn="@string/quitar_pelicula" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView_instrucciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/instrucciones"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</LinearLayout>